services/authelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 4
  name: authelia
  namespace: authelia
spec:
  ingressClassName: traefik
  rules:
  - host: auth.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: auth-svc
            port:
              number: 9091
        path: /
        pathType: Prefix
  - host: auth.homelab.local
    http:
      paths:
      - backend:
          service:
            name: auth-svc
            port:
              number: 9091
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.homelab.local
    - auth.completeautomate.com
